Add 2 players under each sports

--- a/index.html
+++ b/index.html
@@ -49,13 +49,35 @@
 
         
             <div class="content">
-            <h3>My Top 5 favourite sports are folllowing:</h3>
+            <h3>My Top 5 favourite sports are following:</h3>
             <ol>
                 <li>Cricket</li>
+                <ul>
+                    <li>Virat Kohli</li>
+                    <!-- <p>He is the great batsman in the whole world.</p> -->
+                    <li>Ms Dhoni</li>
+                    <!-- <p>He is best captain of India</p> -->
+                </ul>
                 <li>Football</li>
+                <ul>
+                    <li>Lionel Messi</li>
+                    <li>Cristiano Ronaldo</li>
+                </ul>
                 <li>Hockey</li>
+                <ul>
+                    <li>Mandeep Singh</li>
+                    <li>PR Sreejesh</li>
+                </ul>
                 <li>Kabaddi</li>
+                <ul>
+                    <li>Pradeep Narwal</li>
+                    <li>Pawan Kumar</li>
+                </ul>
                 <li>Badminton</li>
+                <ul>
+                    <li>PV Sindhu</li>
+                    <li>Saina Nehwal</li>
+                </ul>
             </ol>
         </div>
         </div> 
