--- a/index.html
+++ b/index.html
@@ -51,32 +51,92 @@
             <div class="content">
             <h3>My Top 5 favourite sports are following:</h3>
             <ol>
-                <li>Cricket</li>
+                <li> <h3>Cricket</h3></li>
                 <ul>
                     <li>Virat Kohli</li>
                     <!-- <p>He is the great batsman in the whole world.</p> -->
+                    <ul>
+                        <h4>Achievements:</h4>
+                        <li>Wisden Leading cricketer of the year 2016</li>
+                        <li>More than 20,000 runs in a decade</li>
+                        <li>Most successful Indian captain in Test Matches</li>
+                        <li>Most runs in a single IPL edition(2016) </li>
+                    </ul>
                     <li>Ms Dhoni</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>MS Dhoni is the only Indian captain who has led India to all three major ICC events</li>
+                        <li>Dhoni is the fourth fastest batsman who has completed  8000 runs in New Zealand fifth and final match.</li>
+                        <li>2008 and 2009 Dhoni was awarded the ICC Player of the Year trophy.</li>
+                    </ul>
                     <!-- <p>He is best captain of India</p> -->
                 </ul>
-                <li>Football</li>
+                <li><h3>Football</h3></li>
                 <ul>
                     <li>Lionel Messi</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>Champions League title with Barcelona.</li>
+                        <li>Active LaLiga Player with the Highest League Title Wins</li>
+                        <li>He have Total 5 Ballon d’Or awards</li>
+                    </ul>
                     <li>Cristiano Ronaldo</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>HE SWEPT THE MAJOR EPL AWARDS FOR THE 2006–07 SEASON.</li>
+                        <li>RONALDO WON THE EUROPEAN GOLDEN SHOE FOR THE 2007–08 SEASON.</li>
+                        <li>HE HOLDS THE RECORD FOR MOST GOALS IN A SINGLE CHAMPIONS LEAGUE SEASON.</li>
+                    </ul>
                 </ul>
-                <li>Hockey</li>
+                <li><h3>Hockey</h3></li>
                 <ul>
                     <li>Mandeep Singh</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>Ponty Chadha Trophy for the Upcoming Player of the Tournament (2013).</li>
+                        <li>Best Junior Player of the 2012–14 Men's FIH Hockey World League Final (2014).</li>
+                    </ul>
                     <li>PR Sreejesh</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>Asian champion’s trophy of Ordos city in 2011 just got lucky for Sreejesh and he bagged Gold Medal in this games.</li>
+                        <li>He also bagged gold at 2016 Kuantan Asian Champions Trophy games</li>
+                        <li>He is the hero of the Asian champion’s trophy of 2018 at Muscat, where India bagged a Gold medal.</li>
+                    </ul>
                 </ul>
-                <li>Kabaddi</li>
+                <li> <h3>Kabaddi</h3></li>
                 <ul>
                     <li>Pradeep Narwal</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>Won VIVO Pro Kabaddi in 2016 and 2017.</li>
+                        <li>Won Kabaddi World Cup in 2016.</li>
+                        <li>Asian Kabaddi Championship in 2017.</li>
+                        <li>Kabaddi Masters Dubai in 2018.</li>
+                    </ul>
                     <li>Pawan Kumar</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>Most Valuable Player (2018).</li>
+                        <li>Most raid points (2018) , (2019)  and (2021).</li>
+                    </ul>
                 </ul>
-                <li>Badminton</li>
+                <li> <h3 class="space">Badminton</h3> </li>
                 <ul>
                     <li>PV Sindhu</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>Gold in 2019 World Championships.</li>
+                        <li>Silver in 2018 Asian Games</li>
+                        <li>Silver in 2016 Rio Olympics</li>
+                    </ul>
                     <li>Saina Nehwal</li>
+                    <ul>
+                        <h4>Achievements</h4>
+                        <li>Saina Nehwal won the 2012 Bronze Olympic Medal in Badminton and became the first-ever Indian badminton player to win an Olympics medal.</li>
+                        <li>Saina Nehwal has won 24 international titles, including first rank in Badminton World Federation (BWF) Tour and eleven Superseries title.</li>
+                        <li>She bagged World no. 1 ranking in 2015.</li>
+                    </ul>
                 </ul>
             </ol>
         </div>
